# ARTEMIS

./: .gitattributes  .gitignore  AGENTS.md  README.md
.github/workflows/: esapi-build.yml  python-exe-build.yml  python-tests.yml
docs/: data_protection.md  deployment.md  installation.md  workflow.md
eclipse_script/: ARTEMIS.Version.props  README.md  USZ_ARTEMIS.Offline.sln  USZ_ARTEMIS.sln
eclipse_script/USZ_ARTEMIS.Core.Tests/: AssemblyIdentityTests.cs  (+1 more)
preprocessing/: README.md  constraints-dev.txt  pyproject.toml  requirements.txt
preprocessing/configs/: config.example.yaml  env.example
preprocessing/eclipse_launcher/: README.md  USZ_ARTEMIS_Preprocessing.cs  USZ_ARTEMIS_Preprocessing.example.config
preprocessing/packaging/: evaluate_registration_results.py
preprocessing/packaging/pyinstaller/: artemis_preprocessing.spec  generate_exe.py
preprocessing/src/artemis_preprocessing/: __init__.py  __main__.py  cli.py  main.py  utils.py
preprocessing/src/artemis_preprocessing/db/: connector.py
preprocessing/src/artemis_preprocessing/dicom/: __init__.py  copy_structures.py  crop_series.py  preprocessing.py  rtstruct_id.py  segmentation.py
preprocessing/src/artemis_preprocessing/gui/: app.py
preprocessing/src/artemis_preprocessing/imaging/: __init__.py  resampling.py
preprocessing/src/artemis_preprocessing/io/: __init__.py  export.py
preprocessing/src/artemis_preprocessing/registration/: core.py
preprocessing/tests/: test_copy_structures.py  test_crop_series.py  test_entrypoints.py  test_gui_warnings.py  test_registration_viewer.py
(+52 files in other folders)
